fin de l'ajout de settlement
